fix: adapter jdk 8
Signed-off-by: jishiwen.jsw <jishiwen.jsw@digital-engine.com>